<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <!--<android.support.v7.widget.Toolbar-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
    <!--</android.support.v7.widget.Toolbar>-->

    <TextView
        android:id="@+id/question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/last_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_step"/>
        <Button
            android:id="@+id/next_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_step"/>
    </LinearLayout>
    <Button
        android:id="@+id/cheat_forAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cheat_for_answer"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/question_isTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_true"/>
        <Button
            android:id="@+id/question_isFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_false"/>
    </LinearLayout>
</LinearLayout>
